refactor : 페이지 수정 및 토큰 관련 피드백 반영